= Wireshark {wireshark-version} Release Notes
// AsciiDoc quick reference: http://powerman.name/doc/asciidoc

This is a semi-experimental release intended to test new features for
Wireshark 2.4.

== What is Wireshark?

Wireshark is the world's most popular network protocol analyzer. It is
used for troubleshooting, analysis, development and education.

== What's New

//=== Bug Fixes

//The following bugs have been fixed:

//* ws-buglink:5000[]
//* ws-buglink:6000[Wireshark bug]
//* cve-idlink:2014-2486[]
//* Wireshark keeps leaving voicemails advertising timeshare condominiums in Fresno. (ws-buglink:0000[])

//_Non-empty section placeholder._

=== New and Updated Features

The following features are new (or have been significantly updated)
since version 2.1.1:

The following features are new (or have been significantly updated)
since version 2.1.0:

* Added -d option for Decode As support in Wireshark (mimics TShark
  functionality)
* The Qt UI, GTK+ UI, and TShark can now export packets as JSON.
  TShark can additionally export packets as Elasticsearch-compatible
  JSON.
* The Qt UI now supports the -j, -J, and -l flags. The -m flag is now
  deprecated.
* The Conversations and Endpoints dialogs are more responsive when
  viewing large numbers of items.
* The RTP player now allows up to 30 minutes of silence frames.
* Packet bytes can now be displayed as EBCDIC.
* The Qt UI loads captures faster on Windows.
* proto_tree_add_checksum was added as an API.  This attempts to
  standardize how checksums are reported and filtered for within
  *Shark.  There are no more individual "good" and "bad" filter
  fields, protocols now have a "checksum.status" field that records
  "Good", "Bad" and "Unverified" (neither good or bad). Color filters
  provided with Wireshark have been adjusted to the new display filter
  names, but custom ones may need to be updated.

The following features are new (or have been significantly updated)
since version 2.0.0:
