@@ -1313,6 +1313,7 @@ set(DISSECTOR_SRC
 	packet-vrrp.c
 	packet-vrt.c
 	packet-vsip.c
+	packet-vsock.c
 	packet-vssmonitoring.c
 	packet-vtp.c
 	packet-vuze-dht.c
